setup/Istio/egress/istio_egress_prometheus.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: prometheus-external-se
  namespace: istio-system
spec:
  hosts:
    - prometheus-ceph-external.local
  addresses:
    - 192.168.0.191/32
    - 192.168.0.192/32
    - 192.168.0.193/32
    - 192.168.0.194/32
  ports:
    - number: 9283
      name: http-prom
      protocol: HTTP
  resolution: STATIC
  location: MESH_EXTERNAL
  endpoints:
    - address: 192.168.0.191
    - address: 192.168.0.192
    - address: 192.168.0.193
    - address: 192.168.0.194
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: prometheus-egress-gateway
  namespace: istio-system
spec:
  selector:
    # must match the labels on the egress gateway workload
    istio: egressgateway
  servers:
    - port:
        number: 9283
        name: http-prom
        protocol: HTTP
      hosts:
        - prometheus-ceph-external.local
---
# VirtualService in istio-system: route requests received by the egress gateway to the external host
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: prometheus-egress-routing
  namespace: istio-system
spec:
  hosts:
    - prometheus-ceph
  gateways:
    - istio-system/prometheus-egress-gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: prometheus-ceph-external.local
            port:
              number: 9283
---
# VirtualService in istio-system: route requests received by the egress gateway to the external host
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: prometheus-egress-routing
  namespace: istio-system
spec:
  hosts:
    - prometheus-ceph
  gateways:
    - istio-system/prometheus-egress-gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: prometheus-ceph-external.local
            port:
              number: 9283
---
apiVersion: networking.istio.io/v1beta1
kind: Sidecar
metadata:
  name: prometheus-egress-sidecar
  namespace: istio-system
spec:
  # no workloadSelector -> applies to all workloads in istio-system namespace
  egress:
    - hosts:
        - "./*"                         # allow services in same namespace
        - "istio-system/*"
        - "kube-system/*"
        - "istio-system/prometheus-ceph-external.local"  # allow access to the external Prometheus endpoints
---
apiVersion: v1
kind: Endpoints
metadata:
  name: prometheus-ceph-external
  namespace: istio-system
subsets:
  - addresses:
      - ip: 192.168.0.191
      - ip: 192.168.0.192
      - ip: 192.168.0.193
      - ip: 192.168.0.194
    ports:
      - name: http-prom
        port: 9283
        protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: prometheus-ceph-external
  namespace: istio-system
spec:
  ports:
    - name: http-prom
      port: 9283
      targetPort: 9283
  clusterIP: None    # headless service - backed by manual Endpoints
---
