setup/Istio/egress/istio_egress_rook_ceph.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: rook-ceph-se
  namespace: istio-system
spec:
  hosts:
    - rook-ceph-external.local
  addresses:
    - 192.168.0.191
    - 192.168.0.192
    - 192.168.0.193
    - 192.168.0.194
  ports:
    - number: 6789
      name: http-prom
      protocol: HTTP
  resolution: STATIC
  location: MESH_EXTERNAL
  endpoints:
  - address: 192.168.0.191
  - address: 192.168.0.192
  - address: 192.168.0.193
  - address: 192.168.0.194
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: rook-ceph-gateway
  namespace: istio-system
spec:
  selector:
    # must match the labels on the egress gateway workload
    istio: egressgateway
  servers:
    - port:
        number: 6789
        name: http-prom
        protocol: HTTP
      hosts:
        - rook-ceph-external.local
---
# VirtualService in rook-ceph: route requests received by the egress gateway to the external host
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: rook-ceph-vs
  namespace: rook-ceph
spec:
  hosts:
    - rook-ceph
  gateways:
    - istio-system/rook-ceph-gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: rook-ceph-external.local
            port:
              number: 6789
---
apiVersion: networking.istio.io/v1beta1
kind: Sidecar
metadata:
  name: rook-ceph-sc
  namespace: rook-ceph
spec:
  # no workloadSelector -> applies to all workloads in rook-ceph namespace
  egress:
    - hosts:
        - "./*"                         # allow services in same namespace
        - "istio-system/*"
        - "kube-system/*"
---
apiVersion: v1
kind: Service
metadata:
  name: rook-ceph
  namespace: rook-ceph
spec:
  ports:
  - name: http-prom
    port: 6789
    targetPort: http-prom
  clusterIP: None    # headless service - backed by manual Endpoints
  clusterIPs:
  - None
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  sessionAffinity: None
  type: ClusterIP
---
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: rook-ceph-1 # by convention, use the name of the Service as a prefix for the name of the EndpointSlice
  namespace: rook-ceph
  labels:
    # You should set the "kubernetes.io/service-name" label.
    # Set its value to match the name of the Service
    kubernetes.io/service-name: rook-ceph
    endpointslice.kubernetes.io/managed-by: endpointslice-controller.k8s.io
addressType: IPv4
ports:
- name: http-prom # should match with the name of the service port defined above
  appProtocol: HTTP
  protocol: TCP
  port: 6789
endpoints:
  - addresses:
    - 192.168.0.191
    - 192.168.0.192
    - 192.168.0.193
    - 192.168.0.194
---
